# AgoraWithFaceUnity

./: Podfile  README-iOS.md  README.md
AgoraRtcKit.framework/Headers/: AgoraBaseDelegate.h  AgoraEnumerates.h  AgoraExtObjects.h  AgoraMediaFilterEventDelegate.h  AgoraMediaFilterExtensionDelegate.h  AgoraObjects.h  AgoraRtcEngineDelegate2.h  AgoraRtcEngineKit.h  AgoraRtcEngineKitEx.h  AgoraRtcMediaPlayerProtocol.h  AgoraVideoFilterDelegate.h  IAgoraMediaPlayerKit.h
AgoraRtcKit.framework/Modules/: module.modulemap
AgoraWithFaceUnity.xcodeproj/: project.pbxproj
AgoraWithFaceUnity.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AgoraWithFaceUnity.xcodeproj/xcshareddata/xcschemes/: AgoraWithFaceUnity.xcscheme  FaceUnityExtension.xcscheme
AgoraWithFaceUnity.xcworkspace/: contents.xcworkspacedata
AgoraWithFaceUnity.xcworkspace/xcuserdata/sunmu.xcuserdatad/: UserInterfaceState.xcuserstate
AgoraWithFaceUnity/Application/: AgoraWithFaceUnity.pch  AppDelegate.h  AppDelegate.m  Info.plist  Segments.plist  main.m
AgoraWithFaceUnity/Application/Base.lproj/: Main.storyboard
AgoraWithFaceUnity/Helpers/: AFUHelper.h  AFUHelper.m  UIColor+AFUHex.h  UIColor+AFUHex.m
AgoraWithFaceUnity/Macros/: AFUMacros.h  AFUUtility.h  AFUUtility.m  AFUUtilityDefines.h
AgoraWithFaceUnity/Module/Controller/: AFUMainViewController.h  AFUMainViewController.m
AgoraWithFaceUnity/Module/Model/: AFUBeautyItem.h  AFUBeautyItem.m  AFUFilterItem.h  AFUFilterItem.m  AFUPortraitSegmentationItem.h  AFUPortraitSegmentationItem.m  AFUSegment.h  AFUSegment.m
AgoraWithFaceUnity/Module/View/: AFUBeautyCell.h  AFUBeautyCell.m  AFUBottomSegmentCollectionViewCell.h  AFUBottomSegmentCollectionViewCell.m  AFUBottomSegmentView.h  AFUBottomSegmentView.m  AFUFaceBeautyView.h  AFUFaceBeautyView.m  AFUFiltersView.h  AFUFiltersView.m  AFUInsetsLabel.h  AFUInsetsLabel.m  AFUPortraitSegmentationView.h  AFUPortraitSegmentationView.m  AFURecognitionView.h  AFURecognitionView.m  AFUSkinBeautyView.h  AFUSkinBeautyView.m  AFUStickersView.h  AFUStickersView.m  FUSlider.h  FUSlider.m
AgoraWithFaceUnity/Resources/: authpack.json
AgoraWithFaceUnity/Resources/graphics/: body_slim.bundle  face_beautification.bundle  face_makeup.bundle
AgoraWithFaceUnity/Resources/model/: ai_bgseg.bundle  ai_bgseg_green.bundle  ai_gesture.bundle  ai_hairseg.bundle  ai_hand_processor.bundle
AgoraWithFaceUnity/Resources/others/: bodyLandmarks_dance.bundle  bodyLandmarks_selife.bundle  bodyRect.bundle  halfBodyDetect.bundle  hand_rect.bundle  hand_type.bundle  landmarks.bundle  wholeBodyDetect.bundle
AgoraWithFaceUnityTests/: AgoraWithFaceUnityTests.m
AgoraWithFaceUnityUITests/: AgoraWithFaceUnityUITests.m
FaceUnityExtension.framework/: CMakeLists.txt  FaceUnityExtension  Info.plist
FaceUnityExtension.framework/Headers/: FUVideoFilterManager.h  FaceUnityExtension.h
FaceUnityExtension.framework/Modules/: module.modulemap
FaceUnityExtension.framework/_CodeSignature/: CodeResources
libCNamaSDK.framework/: Info.plist
(+30 files in other folders)
